crates/solidity/testing/snapshots/bindings_output/errors/selector/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:2:20]
   │
 2 │     error TestError();
   │                    ─┬  
   │                     ╰── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 1
 2 │     error TestError();
   │     ──┬── ────┬────  
   │       ╰────────────── unresolved
   │               │      
   │               ╰────── def: 2
   │ 
 4 │     function test() public {
   │              ──┬─  
   │                ╰─── def: 3
 5 │         TestError.selector;
   │         ────┬──── ────┬───  
   │             ╰─────────────── ref: 2
   │                       │     
   │                       ╰───── unresolved
───╯
